# prompting-playground

./: .replit  DESIGN_BRIEF.md  PLAN.md  REPLIT.md  pyproject.toml  replit.nix  requirements.txt  run.py
backend/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  i18n.jsx  index.css  main.jsx
frontend/src/components/: ExperimentHistory.jsx  LanguageSwitcher.jsx  ModelLibrary.jsx  ResultsDisplay.jsx  StarRating.jsx  TemplateLibrary.jsx  TemplateWithInputs.jsx  TipsPanel.jsx  Toast.jsx
results/: school-letter_2025-12-20_14-41.md
static/: index.html
static/assets/: index-BGpsMTd9.js  index-BJrYK_1v.js  index-BKrED7tc.css  index-BOeZt8hK.css  index-Ba7zw8-l.js  index-BbWjMgWc.css  index-BeIwy4wA.css  index-BzYGvR52.js  index-CPWfCcU3.css  index-CRwgwOX6.js  index-Cb7pENLS.css  index-CjIz34GK.js  index-CrWocSVF.js  index-CuRBKauJ.js  index-Cy6BKQAQ.js  index-D-kf4z7T.js  index-D3wAgmH8.js  index-DBA6S4Cn.js  index-WkIJHUMq.js  index-YULDJdnb.css
templates/: README.md  baseline.yaml  chain-of-thought.yaml  co-star.yaml  constraints.yaml  create-framework.yaml  crisp-e.yaml  dsp-keywords.yaml  emotional-appeal.yaml  few-shot.yaml  hierarchical.yaml  iterative-refinement.yaml  multi-perspective.yaml  role-expert.yaml  rtf.yaml  skeleton-of-thought.yaml  structured-json.yaml  two-stage-role.yaml
tests/: example.yaml  school-letter.yaml
